# simple-meanshift-traker

./: CMakeLists.txt  MeanShiftTracker.cpp  MeanShiftTracker.h  README.md  main.cpp
